add nav bar styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Salvation Army</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/output.css">
   </head>
   <body>
@@ -12,15 +13,16 @@
         <p><a href="#">DOING THE MOST GOOD</a></p>
       </div>
       <div class="nav-right">
-        <i class="fas fa-map-marker-alt">Locations</i>
+        <i class="fas fa-map-marker-alt"></i>
+        <p>Locations</p>
         <button type="button" name="button">Donate</button>
       </div>
     </nav>
     <div class="options">
-      <a href="#">What We Do</a>
-      <a href="#">About Us</a>
-      <a href="#">Ways to Give</a>
-      <a href="#">Newsroom</a>
+      <p><a href="#">What We Do</a></p>
+      <p><a href="#">About Us</a></p>
+      <p><a href="#">Ways to Give</a></p>
+      <p><a href="#">Newsroom</a></p>
     </div>
 
   </body>
