add section and photo collage

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <title>Salvation Army</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Cinzel" rel="stylesheet">
     <link rel="stylesheet" href="css/output.css">
   </head>
   <body>
+    <!-- Nav -->
     <nav>
       <div class="nav-left">
         <img id="logo" src="img/logo.svg" alt="Salvation Army">
@@ -25,6 +26,49 @@
       <p><a href="#">Ways to Give</a></p>
       <p><a href="#">Newsroom</a></p>
     </div>
+    <!-- end nav -->
 
+    <!-- hero -->
+    <div class="hero-container">
+      <div class="floater">
+        <h3>A WARM BED ON A COLD NIGHT</h3>
+        <p>We Shelter almost 10 million people each year</p>
+        <button type="button" name="button">Learn More</button>
+      </div>
+    </div>
+    <!-- end hero -->
+
+    <!-- section -->
+    <div class="section-container">
+      <p>The Salvation Army exists to meet human need wherever, whenever, and however we can.</p>
+      <h2>LEARN HOW YOU CAN HELP</h2>
+    </div>
+    <!-- end section -->
+
+    <!-- tiles -->
+    <div class="tiles">
+      <img src="img/tile1.jpg" alt="">
+      <img src="img/tile2.jpg" alt="">
+      <img src="img/tile3.jpg" alt="">
+      <img src="img/tile4.jpg" alt="">
+
+      <img src="img/tile5.jpg" alt="">
+      <img src="img/tile6.jpg" alt="">
+      <img src="img/tile7.jpg" alt="">
+      <img src="img/tile8.jpg" alt="">
+
+      <img src="img/tile9.jpg" alt="">
+      <img src="img/tile10.jpg" alt="">
+      <img src="img/tile11.jpg" alt="">
+      <img src="img/tile12.jpg" alt="">
+
+      <img src="img/tile13.jpg" alt="">
+      <img src="img/tile14.jpg" alt="">
+      <img src="img/tile15.jpg" alt="">
+      <img src="img/tile16.jpg" alt="">
+
+
+    </div>
+    <!-- end tiles -->
   </body>
 </html>
