add media querys for nav, hero pic, image tiles, and information fields

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- end hero -->
 
     <!-- section -->
-    <div class="section-container">
+    <div class="mission">
       <p>The Salvation Army exists to meet human need wherever, whenever, and however we can.</p>
       <h2>LEARN HOW YOU CAN HELP</h2>
     </div>
@@ -66,9 +66,29 @@
       <img src="img/tile14.jpg" alt="">
       <img src="img/tile15.jpg" alt="">
       <img src="img/tile16.jpg" alt="">
-
-
     </div>
     <!-- end tiles -->
+
+    <div class="more-info">
+      <div class="more-info-head">
+        <h2>HOW WE MEET LOCAL NEEDS</h2>
+        <img src="img/localneeds.svg" alt="local needs">
+      </div>
+      <div class="more-info-info">
+        <div class="info-panel">
+          <p><strong>Assess the Need</strong></p>
+          <p>FIRST, we assess the needs of each community in which we serve. We work to understand the obstacles, hardships, and challenges native to the area's particular population.</p>
+        </div>
+        <div class="info-panel">
+          <p><strong>Build the Programs</strong></p>
+          <p>NEXT, we build local programs designed to offer immediate relief, short-term care, and long-term growth in the areas that will best benefit the community.</p>
+        </div>
+        <div class="info-panel">
+          <p><strong>Invest in the Community</strong></p>
+          <p>THEN, we offer the local programs to the local community, working to continually optimize their efficacy via spiritual, physical, and emotional service.</p>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
